2003-06-19  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gt_LOCALE_FR.

2003-06-08  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms): Don't define HAVE_ENVIRON_DECL. Define
	eaccess.
	* Makefile.vms (all, install, installdirs, uninstall, check,
	mostlyclean, clean, distclean, maintainer-clean): Fix passing of srcdir
	to sub-Makefile.
	Reported by Jouk Jansen <joukj@hrem.stm.tudelft.nl>.

2003-05-22  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12.1 released.

2003-05-20  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms, config.h.msvc, windows/stdbool.h):
	Don't use $< here.

2003-05-19  Bruno Haible  <bruno@clisp.org>

	* windows/gettextlib.rc: Include <winver.h>.
	* windows/gettextsrc.rc: Likewise.
	Reported by Perry Rapp.

2003-05-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12 released.

2003-05-17  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h.msvc): Define HAVE_STRPBRK.

2003-05-15  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms, config.h.msvc): Define HAVE_DECL_STRERROR.

2003-05-12  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke AC_GNU_SOURCE and jm_FUNC_GLIBC_UNLOCKED_IO.

2003-05-12  Bruno Haible  <bruno@clisp.org>

	* windows/gettextsrc.def: Update.
	Based on a patch by Perry Rapp.

2003-04-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms): Renamed from config.h.vms.
	* Makefile.vms: Don't use the force target. Use config.h_vms, not
	config.h.vms. Create intl subdirectory. Correct wildcard syntax.
	Suggested by Jouk Jansen <joukj@hrem.stm.tudelft.nl>.

2003-04-12  Bruno Haible  <bruno@clisp.org>

	* configure.ac (mandir): Change default value.
	* Makefile.msvc (mandir, docdir): Use datadir instead of prefix.

2003-04-10  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_FUNC_EACCESS.

2003-04-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h.msvc): Remove redundant sed expression.

2003-04-03  Bruno Haible  <bruno@clisp.org>
