@@ -202,8 +202,8 @@ config.h.msvc: config.h.in ../version.sh
 	    -e '/#undef INSTALLPREFIX$$/d' \
 	  < $(srcdir)/config.h.in > $@
 
-windows/stdbool.h: lib/stdbool.h.in
-	sed -e 's/@''HAVE__BOOL''@/0/' < $(srcdir)/lib/stdbool.h.in > $@
+windows/stdbool.h: lib/stdbool_.h
+	sed -e 's/@''HAVE__BOOL''@/0/' < $(srcdir)/lib/stdbool_.h > $@
 
 all-local : windows/stdbool.h
 
