@@ -1,3 +1,8 @@
+2003-07-01  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (EXTRA_DIST, stdbool.h): Use stdbool_.h instead of
+	stdbool.h.in.
+
 2003-05-28  Paul Eggert  <eggert@twinsun.com>
 
 	* pathmax.h: Include <limits.h> without checking for HAVE_LIMITS_H.
